--- a/src/app/user/user-settings/user-settings.component.html
+++ b/src/app/user/user-settings/user-settings.component.html
@@ -23,12 +23,18 @@
 
     <div *ngIf="activeTab === 'personal'">
       <h3>Personal Info</h3>
-      <p><strong>Name:</strong> David <span class="edit-link">Edit</span></p>
-      <p><strong>Country:</strong>  Italy <span class="edit-link">Edit</span></p>
-      <p><strong>Timezone:</strong> Europe/Rome <span class="edit-link">Edit</span></p>
-      <p><strong>About:</strong> Hey, it's me  <span class="edit-link">Edit</span></p>
+      <p><strong>Name:</strong><span class="edit-link">Edit</span></p>
+      <p><strong>phone</strong> <span class="edit-link">Edit</span></p>
+      <p><strong>Dob :</strong><span class="edit-link">Edit</span></p>
+      <p><strong>Adress:</strong> <span class="edit-link">Edit</span></p>
+      <p><strong>Pan no:</strong> <span class="edit-link">Edit</span></p>
+      <p><strong>Status</strong> <span class="edit-link">Edit</span></p>
+      <p><strong>Active no FD's</strong> <span class="edit-link">Edit</span></p>
+      <p><strong>Bank name</strong> <span class="edit-link">Edit</span></p>
+      <p><strong>Bank Acc no</strong> <span class="edit-link">Edit</span></p>
+      <p><strong>Bank IFSC</strong> <span class="edit-link">Edit</span></p>
     </div>
-
+    
     <div *ngIf="activeTab === 'security'">
       <h3>Login & Security</h3>
     </div>
