--- a/src/app/user/payments/payments.component.css
+++ b/src/app/user/payments/payments.component.css
@@ -141,7 +141,6 @@
   padding: 0;
   border-radius: 16px;
   border: 2px solid var(--primary);
-  box-shadow: 0 0 25px rgba(162, 5, 234, 0.1);
   width: 100%;
   max-width: 460px;
   animation: fadeIn 0.3s ease-out;
@@ -309,4 +308,13 @@ button {
 .modal-wrapper.scrollable {
   max-height: 90vh;
   overflow-y: auto;
+}
+.invalid-input {
+  border: 1px solid red;
+}
+
+.error-msg {
+  color: red;
+  font-size: 12px;
+  margin-top: 4px;
 }
